syntax = "proto3";

package register.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/empty.proto";
option go_package = "api/register/v1;v1";

message AccountRequest {
    string username = 1  [(validate.rules).string.min_len = 1]; // 账户名(*)
    string password = 2  [(validate.rules).string.min_len = 1]; // 密码
    string nickname = 3  [(validate.rules).string.min_len = 1]; // 昵称
}

message RegisterReply {
    string id = 1; // 用户ID
}

message PreEmailRequest {
    string email = 1  [(validate.rules).string.min_len = 1]; // 邮箱(*)
}

message EmailRequest {
    string email = 1  [(validate.rules).string.min_len = 1]; // 邮箱(*)
    string password = 2  [(validate.rules).string.min_len = 1]; // 密码
    string nickname = 3  [(validate.rules).string.min_len = 1]; // 昵称
    string code = 4  [(validate.rules).string.min_len = 1]; // 验证码
}

message PrePhoneRequest {
    string phone = 1  [(validate.rules).string.min_len = 1]; // 手机号(*)
}

message PhoneRequest {
    string phone = 1  [(validate.rules).string.min_len = 1]; // 手机号(*)
    string password = 2  [(validate.rules).string.min_len = 1]; // 密码
    string nickname = 3  [(validate.rules).string.min_len = 1]; // 昵称
    string code = 4  [(validate.rules).string.min_len = 1]; // 验证码
}

service Register {
    rpc Account (AccountRequest) returns (RegisterReply) {
        option (google.api.http) = {
            post: "/register/v1/account"
            body: "*"
        };
    }
    rpc PreEmail(PreEmailRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/register/v1/pre_email"
            body: "*"
        };
    }
    rpc Email (EmailRequest) returns (RegisterReply) {
        option (google.api.http) = {
            post: "/register/v1/email"
            body: "*"
        };
    }
    rpc PrePhone (PrePhoneRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/register/v1/pre_phone"
            body: "*"
        };
    }
    rpc Phone (PhoneRequest) returns (RegisterReply) {
        option (google.api.http) = {
            post: "/register/v1/phone"
            body: "*"
        };
    }
}
